--- a/book-service/build.gradle
+++ b/book-service/build.gradle
@@ -2,6 +2,7 @@ buildscript {
 	ext {
 		mapstruct = '1.5.3.Final'
 		openapi = '1.6.13'
+		springCloudVersion = '2022.0.1'
 	}
 }
 
@@ -32,6 +33,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.cloud:spring-cloud-config-client'
 	implementation 'org.liquibase:liquibase-core:4.20.0'
 	implementation 'io.swagger.core.v3:swagger-annotations:2.2.8'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.3'
@@ -49,6 +51,12 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
 
 tasks.named('test') {
