--- a/book-service/src/main/resources/application.yaml
+++ b/book-service/src/main/resources/application.yaml
@@ -5,21 +5,14 @@ server:
 
 spring:
   application:
-    name: resource-server
-  datasource:
-    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DATABASE:postgres}
-    username: ${DB_USER:postgres}
-    password: ${DB_PASSWORD:postgres}
-    driver-class-name: org.postgresql.Driver
-  jpa:
-    show-sql: true
-    properties:
-      hibernate:
-        format_sql: true
-        use_sql_comments: true
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-    hibernate:
-      ddl-auto: none
-  liquibase:
-    enabled: true
-    default-schema: books
+    name: book-server
+
+  config:
+    import: configserver:${CONFIG_SERVER_URI}
+
+  cloud:
+    config:
+      fail-fast: true
+
+  profiles:
+    active: base, postgres, liquibase
